--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -409,7 +409,7 @@ position: 200px;
     -moz-border-radius:6px;
     -webkit-border-radius:6px;
     border-radius:6px;
-    border:1px solid #057fd0;
+    border:1px solid #FFFFFF;
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
