--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -1,6 +1,7 @@
 @import url('font-awesome.css');
 @import url(http://weloveiconfonts.com/api/?family=entypo);
 @import url(http://fonts.googleapis.com/css?family=Gafata);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 /*
 body {
@@ -22,7 +23,7 @@ font-size: 70px;
 .block-form{
 
 
-    font-family: 'Ubuntu', 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     /* Size and position */
     width: 500px;
@@ -115,8 +116,8 @@ font-size: 70px;
     border-radius: 3px;
 
     /* Font styles */
-    font-family: 'Ubuntu', 'Lato', sans-serif;
-    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    color: #3AE9FF;
 
 
 }
@@ -174,7 +175,7 @@ font-size: 70px;
     cursor:pointer;
   
     /* Font styles */
-    font-family: 'Ubuntu', 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: white;
     font-weight: 700;
     font-size: 15px;
@@ -409,7 +410,7 @@ position: 200px;
     -moz-border-radius:6px;
     -webkit-border-radius:6px;
     border-radius:6px;
-    border:1px solid #FFFFFF;
+    border:1px solid #1F2124;
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
