--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -423,6 +423,8 @@ position: 200px;
     text-decoration:none;
     text-shadow:0px -1px 0px #5b6178;
     float:left;
+    position:relative;
+    top:20px;
 	
 }
 #link-login:hover {
