--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -1,6 +1,7 @@
 {% extends "account/base_interface.html" %}
 
 {% block content %}
+<div id="panel1">
 <nav id="menu">
     <ul>
       <li><a href="#">Más visitados.</a></li>
@@ -44,6 +45,7 @@
       <li><a href="#">Los más gustados.</a></li>
     </ul>
 </nav>
+</div>
 <div id="panel"> 
 
   <div id="widget" onClick="cambiopagina()"> 
