--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -410,6 +410,22 @@
       </div>
 </div>
 
+<!-- Mensaje flotante -->
+
+<div id="page-wrapper">
+  <h1></h1>
+  
+  <div id="status">Conectando...</div>
+  
+  <ul id="messages"></ul>
+  
+  <form id="message-form" action="#" method="post">
+    <textarea id="message" placeholder="Escribe tu mensaje aquí..." required></textarea>
+    <button type="submit">Enviar</button>
+    <button type="button" id="close">Cerrar</button>
+  </form>
+</div>
+
 {% endblock%}
 
 
