--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1338,7 +1338,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 
-
 #page-wrapper {
   width: 650px;
   background: #FFF;
@@ -1415,7 +1414,7 @@ textarea {
   margin-bottom: 1rem;
 }
 
-button {
+button[type="buttonn"] {
   display: inline-block;
   border-radius: 3px;
   border: none;
@@ -1431,6 +1430,14 @@ button {
 button[type="submit"] {
   background: #7CE1FF;
   border-bottom: 1px solid #7CE1FF;
+  display: inline-block;
+  border-radius: 3px;
+  border: none;
+  font-size: 0.9rem;
+  padding: 0.6rem 1em;
+  color: white;
+  margin: 0 0.25rem;
+  text-align: center;
 }
 
 button:hover {
@@ -1440,4 +1447,5 @@ button:hover {
 #page-wrapper:hover {
   opacity: 1;
 }
+
 
