--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1367,43 +1367,11 @@ h1 {
 }
 
 
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  font-size: 0.95rem;
-}
-
-ul li {
-  padding: 0.5rem 0.75rem;
-  border-bottom: 1px solid #EEE;
-}
-
-ul li:first-child {
-  border-top: 1px solid #EEE;
-}
-
-ul li span {
-  display: inline-block;
-  width: 90px;
-  font-weight: bold;
-  color: #999;
-  font-size: 0.7rem;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-
-.sent {
-  background-color: #F7F7F7;
-}
-
-.received {}
-
 #message-form {
   margin-top: 1.5rem;
 }
 
-textarea {
+#message {
   width: 100%;
   padding: 0.5rem;
   font-size: 1rem;
