--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -417,10 +417,9 @@
   
   <div id="status">Conectando...</div>
   
-  <ul id="messages"></ul>
   
-  <form id="message-form" action="#" method="post">
-    <textarea id="message" placeholder="Escribe tu mensaje aquí..." required></textarea>
+  <form id="message-form2" action="#" method="post">
+    <textarea id="message2" placeholder="Escribe tu mensaje aquí..." required></textarea>
     <button type="submit">Enviar</button>
     <button type="button" id="close">Cerrar</button>
   </form>
