--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1367,11 +1367,11 @@ h1 {
 }
 
 
-#message-form {
+#message-form2 {
   margin-top: 1.5rem;
 }
 
-#message {
+#message2 {
   width: 100%;
   padding: 0.5rem;
   font-size: 1rem;
