--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -421,7 +421,7 @@
   <form id="message-form2" action="#" method="post">
     <textarea id="message2" placeholder="Escribe tu mensaje aquí..." required></textarea>
     <button type="submit">Enviar</button>
-    <button type="button" id="close">Cerrar</button>
+    <button type="close" id="close">Cerrar</button>
   </form>
 </div>
 
