--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1340,6 +1340,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 #page-wrapper {
   width: 650px;
+  top:10px;
   background: #FFF;
   padding: 1em;
   margin: 1em auto;
