--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1347,6 +1347,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   border-top: 5px solid #94DCFF;
   box-shadow: 0 2px 10px rgba(0,0,0,0.8);
   opacity: 0.6;
+  position:relative;
 }
 
 
