--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -422,7 +422,7 @@
     <textarea id="message2" placeholder="Escribe tu mensaje aquí..." required></textarea>
     <button type="submit">Enviar</button>
     <button type="close" id="close">Cerrar</button>
-    <span class="fontawesome-bullhorn"</span>
+    <button class="fontawesome-bullhorn"</button>
   </form>
 </div>
 
