--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1436,8 +1436,12 @@ button:hover {
 .fontawesome-bullhorn {
   font-size: 20px;
   border-radius: 20px 20px 20px 20px;
-  background-color: orange;
+  background-color: white;
   color: white;
   text-align: center;
   float:right;
+}
+.fontawesome-bullhorn:hover {
+  background-color: #84DFFF;
+
 }
