--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1436,7 +1436,7 @@ button:hover {
 .fontawesome-bullhorn {
   font-size: 20px;
   border-radius: 20px 20px 20px 20px;
-  background-color: white;
+  background-color: #DBDBDB;
   color: white;
   text-align: center;
   float:right;
