--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -423,6 +423,7 @@
     <button type="submit">Enviar</button>
     <button type="close" id="close">Cerrar</button>
     <button class="fontawesome-bullhorn"</button>
+    <button class="fontawesome-camera"</button>
     
   </form>
 </div>
