--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1331,6 +1331,17 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     background: #fff;
 }
 
+.clint{
+  border-radius: 10px 10px 10px 10px;
+  width: 100px;
+  height: 100px;
+  opacity: 0.7;
+}
+.clint:hover {
+  opacity: 1;
+}
+
+
 /** Mensaje flotante */
 *, *:before, *:after {
   -moz-box-sizing: border-box;
