--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -6,7 +6,7 @@
       <li><a href="#">Más visitados.</a></li>
       <li><a href="#">Favoritos.</a>
         <ul>
-          <li><a href="#">Lien 1</a></li>
+          <li><a href="#"><img class="clint" src="http://content7.flixster.com/rtactor/40/36/40361_pro.jpg"></a></li>
           <li><a href="#">Lien 2</a></li>
           <li><a href="#">Lien 3</a></li>
           <li><a href="#">Lien 4</a></li>
