--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -7,33 +7,31 @@
       <li><a href="#">Favoritos.</a>
         <ul>
           <li><a href="#"><img class="clint" src="http://content7.flixster.com/rtactor/40/36/40361_pro.jpg"></a></li>
-          <li><a href="#">Lien 2</a></li>
-          <li><a href="#">Lien 3</a></li>
-          <li><a href="#">Lien 4</a></li>
-          <li><a href="#">Lien 5</a></li>
+        
+    
         </ul>
       </li>
       <li><a href="#">Famosos.</a>
         <ul>
-          <li><a href="#">Lien 1</a>
+          <li><a href="#">Deportes</a>
             <ul>
-              <li><a href="#">Sous-menu 1</a></li>
-              <li><a href="#">Sous-menu 2</a></li>
-              <li><a href="#">Sous-menu 3</a></li>
+              <li><a href="#">Futbol</a></li>
+              <li><a href="#">Baloncesto</a></li>
+              <li><a href="#">Tenis</a></li>
             </ul>
           </li>
-          <li><a href="#">Lien 2</a>
+          <li><a href="#">Cine y música</a>
             <ul>
-              <li><a href="#">Sous-menu 1</a></li>
-              <li><a href="#">Sous-menu 2</a></li>
-              <li><a href="#">Sous-menu 3</a></li>
-              <li><a href="#">Sous-menu 4</a></li>
+              <li><a href="#">Cine</a></li>
+              <li><a href="#">Musica</a></li>
+              <li><a href="#">Premios</a></li>
+              <li><a href="#">Eventos</a></li>
               <li><a href="#">Sous-menu 5</a></li>
             </ul>
           </li>
-          <li><a href="#">Lien 3</a>
+          <li><a href="#">Otros</a>
             <ul>
-              <li><a href="#">Sous-menu 1</a></li>
+              <li><a href="#">Cómicos</a></li>
               <li><a href="#">Sous-menu 2</a></li>
               <li><a href="#">Sous-menu 3</a></li>
             </ul>
