--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1467,3 +1467,17 @@ button:hover {
 }
 .fontawesome-camera:hover {
   background-color: white;
+}
+
+.fontawesome-remove-sign {
+  background-color: white;
+  color:black;
+  font-size: 12px;
+  float:right;
+  top: auto;
+
+}
+.fontawesome-remove-sign:hover {
+  background-color:#FF9292;
+  color:white;
+}
