--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -422,7 +422,7 @@
     <button type="close" id="close">Cerrar</button>
     <button class="fontawesome-bullhorn"</button>
     <button class="fontawesome-camera"</button>
-    <button class="fontawesome-remove-sign"</button>
+    <span class="fontawesome-remove-sign"</span>
     
   </form>
 </div>
