--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -7,7 +7,7 @@
 	display: flex;
 	position: absolute;
 	margin: 5em auto;
-	width: 901px;/*70%*/
+	width: 70%;
 	height: 38px;
 	top: -50px;
 	left: 450px;
@@ -41,6 +41,7 @@
   height:34px;
   margin-top:2px;
   margin-left:0px;
+  color: #95E9FF;
 }
 
 .field>form button {
