--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -29,8 +29,8 @@
 
 .field>form input[type=text],
 .field>form button {
-  /*display:block;*/
-  font:1.2em 'Montserrat Alternates';
+  *isplay:block;
+ font:1.2em 'Montserrat Alternates';
 }
 
 .field>form input[type=text] {
