--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -45,7 +45,7 @@
 }
 
 .field>form button {
-	/*padding: 0.6em 0.8em;*/
+	padding: 0.6em 0.8em;
 	background-color: rgb(26, 188, 156);
 	color: white;
 	border: none;
