--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -29,7 +29,7 @@
 
 .field>form input[type=text],
 .field>form button {
-  display:block;
+ /* display:block;*/
  font:1.2em 'Montserrat Alternates';
 }
 
