--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -5,7 +5,7 @@
 /*caja de busqueda*/
 .field {
 	display: flex;
-	position: absolute;
+	position: relative;
 	margin: 5em auto;
 	width: 901px;/*70%*/
 	height: 38px;
