--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -4,7 +4,7 @@
 
 /*caja de busqueda*/
 .field {
-	display: block;
+	display: flex;
 	position: absolute;
 	margin: 5em auto;
 	width: 901px;/*70%*/
