--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -123,10 +123,10 @@ btn.value = "me gusta (" + i + ")";
 
 
   		<div id ="box-tool">
-  		<span class="fontawesome-search"</span>
+  		<span id="fontawesome-search"</span>
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
-	  		<a class="fontawesome-cog" href="/config/changepass"></a>
+	  		<span class="fontawesome-cog" href="/config/changepass"></span>
 	  		
 	  	</div>
 
