--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -126,7 +126,7 @@ btn.value = "me gusta (" + i + ")";
   		<span id="fontawesome-search"</span>
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
-	  		<span class="fontawesome-cog" href="/config/changepass"></span>
+	  		<span class="fontawesome-cog" <a href="/config/changepass"></span>
 	  		
 	  	</div>
 
