--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -123,7 +123,7 @@ btn.value = "me gusta (" + i + ")";
 
 
   		<div id ="box-tool">
-  		<span class="fontawesome-search"></span>
+  		<span class="fontawesome-search" id="whut"></span>
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
