--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -104,6 +104,7 @@ btn.value = "me gusta (" + i + ")";
 <nav class="barrah">
 <ul>
 <li><button type="button" id="Menu">Menu</button>
+<li><a class="fontawesome-random"</a>
 <li><div class="field" id="searchform">
   	<!--<input type="text" id="searchterm" placeholder="¿Que es lo que quieres buscar?" />-->
   	<!--<button type="submit" class="btn">¡Buscar!</button>-->
@@ -123,7 +124,7 @@ btn.value = "me gusta (" + i + ")";
 
 
   		<div id ="box-tool">
-  		<span class="fontawesome-search"></span>
+  		
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
