--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -118,7 +118,7 @@ btn.value = "me gusta (" + i + ")";
 	</form>
 	
 
-  	</div></li></li></ul>
+  	</div></li></li></li></ul>
 
   	{% if showPerfilButtons or user.username == user_profile.username %}
 
