--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -126,7 +126,7 @@ btn.value = "me gusta (" + i + ")";
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
-	  		<a class="fontawesome-random"</a>
+	  		<a class="fontawesome-random" id="random"</a>
 	  		
 	  	</div>
 
