--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -125,6 +125,7 @@ btn.value = "me gusta (" + i + ")";
   		<div id ="box-tool">
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
+	  		<span class="fontawesome-random"</span>
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
 	  		
 	  	</div>
