--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -329,9 +329,9 @@
     
   </div>
   <article class="articulo">
-    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
+    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_diodio</a> mentioned you</h2>
     <p class="parrafo">
-      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
+      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> Este mensaje es privado.
     </p>
   </article>
   </div>
