--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 <nav id="menu">
     <ul>
-      <li><a href="#">Más visitados.</a></li>
+      <li><span class="fontawesome-eye-open"></span><a href="#">Más visitados.</a></li>
       <li><a href="#">Favoritos.</a>
         <ul>
           <li><a href="#"><img class="clint" src="http://content7.flixster.com/rtactor/40/36/40361_pro.jpg"></a></li>
