--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1468,3 +1468,7 @@ button:hover {
 .fontawesome-camera:hover {
   background-color: white;
 }
+.fontawesome-eye-open {
+  font-size: 20px;
+  color:white;
+}
