--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -4,14 +4,14 @@
 <nav id="menu">
     <ul>
       <li><a class="fontawesome-eye-open" href="#">Más visitados.</a></li>
-      <li><a href="#">Favoritos.</a>
+      <li><a class="fontawesome-star-empty" href="#">Favoritos.</a>
         <ul>
           <li><a href="#"><img class="clint" src="http://content7.flixster.com/rtactor/40/36/40361_pro.jpg"></a></li>
         
     
         </ul>
       </li>
-      <li><a href="#">Famosos.</a>
+      <li><a class="fontawesome-star-half" href="#">Famosos.</a>
         <ul>
           <li><a href="#">Deportes</a>
             <ul>
@@ -38,8 +38,8 @@
           </li>
         </ul>
       </li>
-      <li><a href="#">Descubre.</a></li>
-      <li><a href="#">Los más gustados.</a></li>
+      <li><aclass="fontawesome-globe" href="#">Descubre.</a></li>
+      <li><a class="fontawesome-heart-empty" href="#">Los más gustados.</a></li>
     </ul>
 </nav>
 <div id="panel"> 
