--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -105,7 +105,7 @@
  
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="user-card card">
-          <div class="user-avatar"><img src="{{STATIC_URL}}img/bola/11.jpg" class="user-bg"><span class="fontawesome-pencil"> </span>
+          <div class="user-avatar"><img class="avatarr" src="{{STATIC_URL}}img/bola/11.jpg" class="user-bg"><span class="fontawesome-pencil"> </span>
             <input type="checkbox" id="button-menu"  />
             <div class="caja">
              <div class="item">
