--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -817,7 +817,7 @@ body > .container {
       color: #e76049; }
     .sidebar .content figure .description a span {
       margin-right: 0.35em; }
-      .user-bg img {
+      .user-bg {
         width: 100%;
         height: 100%;
 
@@ -827,7 +827,7 @@ body > .container {
       -ms-transition: all 1s ease;
           transition: all 1s ease;
       }
-      .user-bg img {
+      .user-bg {
         width: 80%;
         height: 80%;
       }
