--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -420,8 +420,8 @@
     <textarea id="message2" placeholder="Escribe tu mensaje aquí..." required></textarea>
     <button type="submit">Enviar</button>
     <button type="close" id="close">Cerrar</button>
-    <button class="fontawesome-bullhorn"</button>
-    <button class="fontawesome-camera"</button>
+    <span class="fontawesome-bullhorn"</span>
+    <span class="fontawesome-camera"</span>
    
     
   </form>
