--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1468,6 +1468,7 @@ button:hover {
   text-align: center;
   float:right;
   display:inline-block;
+  margin-right: 4px;
 
 }
 .fontawesome-camera:hover {
