--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -422,6 +422,7 @@
     <button type="close" id="close">Cerrar</button>
     <button class="fontawesome-bullhorn"</button>
     <button class="fontawesome-camera"</button>
+    <button class="fontawesome-map-marker"</button>
    
     
   </form>
