--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -146,6 +146,7 @@
           </ul>
         </div>
       </div>
+      <!-- bolsa 
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="stock card">
           <div class="stock-chart">
@@ -222,7 +223,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="container">
       <div class="video-player card">
         <div class="vbox">
