--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -224,6 +224,28 @@
         </div>
       </div>
     </div> -->
+    <!-- Reproductor de musica -->
+<section>
+  <img src='http://www.eventostoppanama.com/wp-content/uploads/2011/10/david-guetta-panama.jpg'>
+  <header>
+    <div class='left'>
+      <h1>David Guetta</h1>
+      <h2>Shot Me Down ft. Skylar Grey</h2>
+      <h2>One love.</h2>
+      <span class="fontawesome-heart"</span>
+    </div>
+    <div class='right'>
+      <ul>
+        <span class="fontawesome-play"</span>
+        <span class="fontawesome-pause"</span>
+      </ul>
+      
+    <audio src="musica.mp3"></audio> 
+    </div>
+  </header>
+</section>
+
+
     <div class="container">
       <div class="video-player card">
         <div class="vbox">
