--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -8,7 +8,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css' />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js" /></script>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.min.css" rel="stylesheet" />
-	<link rel="stylesheet" href="{{STATIC_URL}}css/music.css" type="text/css" media="all">
+	
 	
 
 	<!--[if IE 7]>
@@ -162,7 +162,7 @@
 		<li class="selected"><a id ="menucf-changepass" class="messages" href="/config/changepass"><i class="entypo-key"></i>Contraseña. </a></li>
 		<li><a class="settings" href="#"><i class="entypo-lock"></i>Seguridad y privacidad.</a></li>
 		<li><a class="logout" href="cf.html"target="cf"><i class="entypo-mobile"></i>Movil y correo electronico.</a></li>
-				<li><a class="logout" href="/config/widgets"><i class="entypo-sweden"></i>Widgets.</a><em>5</em></li>
+				<li><a class="logout" href="#"><i class="entypo-sweden"></i>Widgets.</a><em>5</em></li>
 						<li><a class="logout" href="#"><i class="entypo-palette"></i>Diseño..</a></li>
 								<li><a id ="menucf-profile" class="logout" href="/config/profile"><i class="entypo-vcard"></i>Perfil.</a></li>
 	</ul>
