--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -125,8 +125,9 @@ btn.value = "me gusta (" + i + ")";
   		<div id ="box-tool">
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
-	  		<A class="fontawesome-random" href="aleatorio.html"</a>
-
+	  		<a class="fontawesome-random" href="aleatorio.html"></a>
+	  		<a class="fontawesome-cog" href="/config/changepass"></a>
+	  		<div class="containz">
     <a href="#" class="button fontawesome-bell-alt"></a>
   
     <ul id="notificacionMenu" class="notifications">
@@ -165,7 +166,7 @@ btn.value = "me gusta (" + i + ")";
               </div>
               <div class="messageinfo">
                 <i class="icon-flag"></i>3 hour ago
-              
+              </div>
             </div>
           </a>
         </li>
@@ -218,7 +219,6 @@ btn.value = "me gusta (" + i + ")";
       </li>
     </ul>
   </div>
-	  		<a class="fontawesome-cog" href="/config/changepass"></a>
 	  		
 	  	</div>
 
