--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1501,7 +1501,10 @@ button:hover {
 @backdwn: #FFF;
 @first: #83EBFF;
 
-
+.containz {
+  width: 100px;
+  margin: 0 auto;
+}
 
 /*.notificationicon {
   height: 44px;
