--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -16,7 +16,7 @@
 <script src="{{STATIC_URL}}js/profile.js"></script>
 <script src="{{STATIC_URL}}js/jquery.colorbox.js"></script>
 <script src="{{STATIC_URL}}js/noti.js"></script>
-<script src="{{STATIC_URL}}"js/notia.js"></script>
+<script src="{{STATIC_URL}}js/notia.js"></script>
 {% block include_files %}{% endblock %}
 
 <script>
