--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -130,7 +130,7 @@ btn.value = "me gusta (" + i + ")";
 	  		<div class="containz">
     <a href="#" class="button fontawesome-bell-alt"></a>
   
-    <ul id="notificacionMenu" class="notifications">
+    <ul id="notificacionnMenu" class="notifications">
       <li class="titlebar">
         <span class="title">Notificaciones.</span>
         <span class="settings"><i class="icon-cog"></i>
