--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -16,7 +16,7 @@
 <script src="{{STATIC_URL}}js/profile.js"></script>
 <script src="{{STATIC_URL}}js/jquery.colorbox.js"></script>
 <script src="{{STATIC_URL}}js/noti.js"></script>
-<script src="{{STATIC_URL}}js/notia.js"></script>
+<script src="{{STATIC_URL}}js/notia.js">
 {% block include_files %}{% endblock %}
 
 <script>
@@ -104,6 +104,98 @@ btn.value = "me gusta (" + i + ")";
 <nav class="barrah">
 <ul>
 <li><button type="button" id="Menu">Menu</button>
+<li> <div class="containz">
+    <a href="#" class="button fontawesome-bell-alt"></a>
+  
+    <ul id="notificacionnMenu" class="notifications">
+      <li class="titlebar">
+        <span class="title">Notificaciones.</span>
+        <span class="settings"><i class="icon-cog"></i>
+        </span>
+      </li>
+      <div class="notifbox">
+        <li class=" notif unread">
+          <a href="#">
+            <div class="imageblock"> 
+              <img src="https://si0.twimg.com/sticky/default_profile_images/default_profile_2_bigger.png" class="notifimage"  />
+            </div> 
+            <div class="messageblock">
+              <div class="message">This guy <strong>Jonesy</strong> has just built a tower.
+              </div>
+              <div class="messageinfo">
+                <i class="icon-trophy"></i>2 hours ago
+              </div>
+            </div>
+          </a>
+        </li>
+        <li class=" notif unread">
+          <a href="#">
+            <div class="imageblock">
+              <img src="http://fotos.subefotos.com/5e4a31e3600a796b163cd306614617cbo.png" class="notifimage"  />
+            </div> 
+            <div class="messageblock">
+              <div class="message">
+                <strong>Pete Nawara</strong> want's to drink beer with you
+              </div>
+              <div class="messageaction">
+                <a class="button tiny success">accept</a> 
+                <a class="button tiny alert">decline</a>
+              </div>
+              <div class="messageinfo">
+                <i class="icon-flag"></i>3 hour ago
+              </div>
+            </div>
+          </a>
+        </li>
+        <li class=" notif">
+          <a href="#">
+            <div class="imageblock"><img src="http://th02.deviantart.net/fs70/PRE/f/2010/171/4/0/Paint_Splash_PNG_by_AbsurdWordPreferred.png" class="notifimage" />
+            </div> 
+            <div class="messageblock">
+              <div class="message"><strong>Gary LaPlante</strong> has talked some trash: "<em>Buncha bitches.</em>
+              </div>
+              <div class="messageinfo">
+                <i class="icon-comment"></i>4 hours ago
+              </div>
+            </div>
+          </a>
+        </li>
+        <li class=" notif">
+          <a href="#">
+            <div class="imageblock"><img src="http://th02.deviantart.net/fs70/PRE/f/2010/171/4/0/Paint_Splash_PNG_by_AbsurdWordPreferred.png" class="notifimage" /></div> 
+            <div class="messageblock">
+              <div class="message"><strong>Jason Nawara</strong> is probably playing <strong>Smite</strong> right now.
+              </div>
+              <div class="messageinfo"><i class="icon-trophy"></i>Yesterday</div>
+            </div>
+          </a>
+        </li>
+        <li class=" notif">
+          <a href="#">
+            <div class="imageblock"><img src="https://si0.twimg.com/sticky/default_profile_images/default_profile_2_bigger.png" class="notifimage"  />
+            </div> 
+            <div class="messageblock">
+              <div class="message"><strong>Danny DK12</strong> got a sweet fade!</div>
+              
+              <div class="messageinfo"><i class="icon-flag"></i>Yesterday</div>
+            </div>
+          </a>
+        </li>
+        <li class=" notif">
+          <a href="#">
+            <div class="imageblock"><img src="http://www.freegreatdesign.com/files/images/8/3533-crystal-rainbow-apple-icon-png-2.jpg" class="notifimage"  /></div> 
+            <div class="messageblock">
+              <div class="message"><strong>Roidberg</strong> left you a comment: "<em>Hey buddy! Nice toenails!"</em></div>
+              <div class="messageinfo"><i class="icon-comment"></i>2 hours ago</div>
+            </div>
+          </a>
+        </li>
+      </div>
+      <li class="seeall">
+        <a>See All</a>
+      </li>
+    </ul>
+  </div></li>
 <li><div class="field" id="searchform">
   	<!--<input type="text" id="searchterm" placeholder="¿Que es lo que quieres buscar?" />-->
   	<!--<button type="submit" class="btn">¡Buscar!</button>-->
@@ -130,7 +222,7 @@ btn.value = "me gusta (" + i + ")";
 	  		<div class="containz">
     <a href="#" class="button fontawesome-bell-alt"></a>
   
-    <ul id="notificacionnMenu" class="notifications">
+    <ul id="notificacionMenu" class="notifications">
       <li class="titlebar">
         <span class="title">Notificaciones.</span>
         <span class="settings"><i class="icon-cog"></i>
