--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -435,6 +435,12 @@ span[class*="thumbs-up"]:hover {
 	height:100%;
 	float:right;
 }
+#box-tool2{
+  padding:10px;
+  width: 300px;
+  height: 100%;
+  float:left;
+}
 .fontawesome-random {
   color:transparent;
   cursor:pointer;
