--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -127,6 +127,7 @@ btn.value = "me gusta (" + i + ")";
 	  		<span class="fontawesome-comment-alt"></span>
 	  		<A class="fontawesome-random" href="aleatorio.html"</a>
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
+	  		<a class="fontawesome-bell-alt"></a>
 	  		
 	  	</div>
 
