--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -549,3 +549,136 @@ opacity: 0.6;
   /*background: transparent;*/
   font-color: #44DFFF;
 }
+
+@hilite: #fed24d;
+@hilite2: #ebb629;
+@primary: #03FF10;
+@backdwn: #FFF;
+@first: #83EBFF;
+
+
+.notifications {
+  max-width: 300px;
+  width: 300px;
+  background: #fff;
+  border: 1px solid #ccc; 
+  padding: 0px;
+  box-shadow: 0px 0px 20px #666;
+  position: absolute;
+  opacity:1;
+  top: 65px;
+  transition: .2s;
+  opacity: 0;
+  left: 10px;
+  &:before {
+    content: '';
+    height: 10px;
+    width: 10px;
+    display: block;
+    position: absolute;
+    top: -20px;
+    left: 140px;
+    border: 10px solid #fff;
+    border-color: transparent transparent #fff transparent;
+  }
+  &.open {
+    opacity: 1;
+    transition:.2s;
+  }
+  li {
+  padding: 5px;
+    list-style-type: none;
+  &.titlebar {
+  border-bottom: 1px solid #ccc;
+  color: #666;
+  font-size: 12px;
+  cursor: inherit;
+  padding: 2px 5px;
+  &:hover {
+  background: #fff;
+  }
+  .settings {
+  float: right;
+  cursor: pointer;
+  }
+  }
+  &.seeall {
+  text-align: center;
+  font-size: 12px;
+  min-height: 30px;
+  text-transform: uppercase;
+  position: relative;
+  border-top: 1px solid #ccc;
+  a {
+  background: transparent;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  color: @first;
+  padding-top: 8px;
+  }
+  }
+  }
+ .notifbox {
+  max-height: 300px;
+  overflow: auto;
+  
+  li {
+  color: #666;
+  a { color: #666;}
+  &.unread {
+  background: lighten(@primary, 45%);
+  }
+  &.notif {
+  min-height: 70px;
+  border-bottom: 1px solid #83EBFF;
+  position: relative;
+  &:last-child {
+  border-bottom: none;
+  }
+  .imageblock {
+  width: 70px;
+  position: absolute;
+  left: 5px;
+  .notifimage {
+  height: 60px;
+  }
+  }
+  .messageblock {
+  width: 200px;
+  position: relative;
+  left: 70px;
+  font-size: 12px;
+  .message {
+  a {
+  color: @primary;
+  }
+  }
+  .messageaction {
+  min-height: 30px;
+  margin-bottom: 5px;
+  .button {
+  font-weight: normal;
+  text-transform: uppercase;
+  &.success, &.alert {
+  color: #fff;
+  }
+  
+  }
+  }
+  .messageinfo {
+  font-size: 10px;
+  color: #999;
+  }
+  }
+  }
+  }
+  }
+}
+.badge {
+position: absolute;
+top: 30px;
+right: -20px;
+}
