--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -564,7 +564,7 @@ opacity: 0.6;
   border: 1px solid #ccc; 
   padding: 0px;
   box-shadow: 0px 0px 20px #666;
-  position: absolute;
+  position: relative;
   opacity:1;
   top: 65px;
   transition: .2s;
