--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -1,5 +1,15 @@
 {% extends "account/base_interface.html" %}
 
+{% block include_files %}
+  {% if liked == True %}
+    <style type="text/css">
+        #ilike_profile {
+            color: #29b203;
+        }
+    </style>
+  {% endif %}
+{% endblock %}
+
 {% block content %}
 <nav id="menu">
     <ul>
@@ -112,9 +122,19 @@
                 
                <img src="{{STATIC_URL}}img/bola/2.jpg" class="user-pic">
                <span class="informacion">
-                 <span class="entypo-plus" title="Agregar" ></span>
-                 <span class="entypo-thumbs-up" title="¡Me gusta!"></span>
-                 <span class="entypo-forward" title="Escribir"></span>
+                {% if user.is_authenticated and user.username == user_profile.username %} <!-- Si el usuario esta visitando su propio perfil -->
+                   <span class="entypo-plus" title="Agregar" ></span>
+                   <span id="ilike_profile" class="entypo-thumbs-up" title="¡Me gusta!" onclick=AJAX_likeprofile('abort')></span>
+                   <span class="entypo-forward" title="Escribir"></span>             
+                {% elif not user.is_authenticated %} <!-- si es usuario anonimo -->
+                   <span class="entypo-plus" title="Agregar" ></span>
+                   <span id="ilike_profile" class="entypo-thumbs-up" title="¡Me gusta!" onclick=AJAX_likeprofile('anonymous')></span>
+                   <span class="entypo-forward" title="Escribir"></span>             
+                {% else %} <!-- si es usuario esta visitando un perfil que no es el suyo -->
+                   <span class="entypo-plus" title="Agregar" ></span>
+                   <span id="ilike_profile" class="entypo-thumbs-up" title="¡Me gusta!" onclick=AJAX_likeprofile('noabort')></span>
+                   <span class="entypo-forward" title="Escribir"></span>
+                {% endif %}
                </span>
               </div>
             </div>
@@ -135,13 +155,13 @@
             <p>{{ userProfile.username }}</p>
             -->
             <!--<h1>{{ userProfile.first_name }} {{ userProfile.last_name }}</h1>-->
-            <p>{{ user_profile.username }}</p>
+            <p>{{ user_profile.username }}</p><p id="profileId" hidden>{{ user_profile.profile.id }}</p>
 
           </header>
           <div class="status">Play hard.</div>
           <ul class="stats">
             <li><a href="/friends"><strong>380</strong><span>Seguidores</span></a></li>
-            <li><a><strong>934</strong><span value="me gusta" onclick="javascript:contador()">Me gusta</span></a></li>
+            <li><a id="likes"><strong>{{n_likes}}</strong><span value="me gusta" onclick="contador()">Me gusta</span></a></li>
             <li><a class='inline' href="#inline_content"><strong>48</strong><span>Fotos</span></a></li>
           </ul>
         </div>
