--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -2,6 +2,7 @@
 
 {% block include_files %}
   {% if liked == True %}
+  <body>
     <style type="text/css">
         #ilike_profile {
             color: #29b203;
@@ -448,6 +449,7 @@
     
   </form>
 </div>
+</body>
 
 {% endblock%}
 
