--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -56,7 +56,21 @@ function cambiopagina(){
 }
 */
 
+<script language="JavaScript1.2">
+<!--
 
+window.moveTo(0,0);
+if (document.all) {
+top.window.resizeTo(screen.availWidth,screen.availHeight);
+}
+else if (document.layers||document.getElementById) {
+if (top.window.outerHeight<screen.availHeight||top.window.outerWidth<screen.availWidth){
+top.window.outerHeight = screen.availHeight;
+top.window.outerWidth = screen.availWidth;
+}
+}
+//-->
+</script>
 
 </script>
 
