--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -55,6 +55,7 @@ function cambiopagina(){
 	setTimeout('location.href="columnas.php"', 500);
 }
 */
+</script>
 
 <script language="JavaScript1.2">
 <!--
